<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Screen Caster</string>
    <string name="action_settings">Settings</string>
    <string name="missing_content">Settings</string>
    <string name="gallery">View gallery</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="gallery_image">Screenshots</string>
    <string name="gallery_videos">Recordings</string>
    <string name="txt_placeholder">Directory empty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="start_serv">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="scr_shot">Screenshot</string>
    <string name="scr_start_record">Start Record</string>
    <string name="scr_stop_record">Stop Record</string>
    <string name="scr_start_cast">Start Casting</string>
    <string name="scr_stop_cast">Stop Casting</string>
    <string name="scr_rotate_cast">Rotate</string>
    <string name="scr_zoomin_cast">Zoom In</string>
    <string name="scr_zoomout_cast">Zoom Out</string>
    <string name="title_activity_start_logo">StartLogo</string>
    <string name="scr_capture">Screen Capture</string>
    <string name="scr_recorder">Video Recorder</string>
    <string name="screenshot">Screenshots</string>
    <string name="videos">Videos</string>
    <string name="help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_home">Home</string>
    <string name="menu_theme">Themes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_like">Like us</string>
    <string name="title_activity_my_logo">MyLogo</string>
    <string name="action_menu">Menu</string>
    <string name="title_activity_new_gallary_view">NewGallaryView</string>
    <string name="title_activity_new_fragment">NewFragmentActivity</string>
    <string name="title_activity_action_bar_tab">ActionBarTab</string>
    <string name="title_activity_screen_shots_fragment">ScreenShotsFragment</string>
    <string name="title_activity_fragment_videos">FragmentVideos</string>
    <string name="title_activity_fragment_caster">FragmentCaster</string>
    <string name="hello_world">Hello world!</string>

</resources>
