<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >    <item android:id="@+id/menu1_home" android:title="@string/menu_home" android:icon="@raw/home" android:onClick="menuClicker"></item>
    <item android:id="@+id/menu2_share" android:title="@string/menu_share" android:icon="@raw/share" android:onClick="menuClicker"></item>
    <item android:id="@+id/menu3_like" android:title="@string/menu_like" android:onClick="menuClicker" android:icon="@raw/like"></item>
    <item android:id="@+id/menu4_theme" android:title="@string/menu_theme" android:onClick="menuClicker" android:icon="@raw/theme"></item>
    <item android:id="@+id/menu5_settings" android:title="@string/menu_settings" android:onClick="menuClicker" android:icon="@raw/setting"></item>
    <item android:id="@+id/munu6_exit" android:title="@string/menu_exit" android:onClick="menuClicker" android:icon="@raw/exit"></item>
</menu>
