<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        tools:ignore="UselessParent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_start_serv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_serv"
                android:onClick="settingsClicker" />

            <Button
                android:id="@+id/btn_stop_serv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/stop_service" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_scr_start_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_start_record" />

            <Button
                android:id="@+id/btn_scr_stop_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_stop_record" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_scr_start_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_start_cast" />

            <Button
                android:id="@+id/btn_scr_stop_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_stop_cast" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_scr_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_shot" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_scr_rotate_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_rotate_cast" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_scr_zoomin_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_zoomin_cast" />

            <Button
                android:id="@+id/btn_scr_zoomout_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicker"
                android:text="@string/scr_zoomout_cast" />

        </TableRow>

    </TableLayout>

</RelativeLayout>